--- a/brianwho.html
+++ b/brianwho.html
@@ -15,16 +15,13 @@
       <section><p>  </p>
 
 <p>
-As a native Frenchman and trained translator, I began assisting researchers—until proximity to Paris revealed clients needed more: desires turned into reality, not just words.<br><br>
-
-Translations evolved into discreet liaison work—like a trusted butler, guiding English-speakers through French savoir-faire and savoir-vivre with elegance and confidentiality.<br><br>
-
-Paris brought memorable adventures: Assisting Captain Martin Bayerle with inquiries into the legendary RMS Republic treasure at the Banque de France; sourcing a rare painting for filmmaker Alec Huggins on a Paris shoot; supporting a Canadian in defending linguistic rights; acting as personal agent for a Playmate navigating Paris Fashion Week shows; and countless other resourceful tasks demanding discretion and ingenuity.<br><br>
-
-Now settled as housekeeper at exquisite Les Hauts de Loire in the Loire Valley, I dedicate my bilingual expertise to fulfilling English-speaking clients' every whim with grace.<br><br>
-
-Thus was born <strong>France's butler</strong>: Tailor-made, confidential support for property, administration, concierge, emergencies—and all aspects of life in France.
-
+I’m a native Frenchman who started as a translator—but Paris changed everything.
+English-speaking clients didn’t just want words translated; they needed someone to navigate the real France: the bureaucracy, the hidden gems, the impossible requests. <br><br>
+So I stepped in—discreet, bilingual, always one step ahead—like the butler you wish you had.<br><br>
+I’ve guided treasure hunter Captain Martin Bayerle through the Banque de France archives chasing clues to the RMS Republic’s lost gold. Hunted down a rare painting across Paris for filmmaker Alec Huggins mid-shoot. Helped a Canadian fight for his linguistic rights. Even served as personal agent for a Playmate cutting through the chaos of Fashion Week.<br><br>
+These aren’t stories—they’re proof.<br><br>
+Now, from the serene elegance of Les Hauts de Loire in the Loire Valley, I offer that same unflappable expertise to you.<br><br>
+Property hunts, red-tape battles, exclusive bookings, emergencies—whatever France throws at you, I handle it with grace and total confidentiality.<br><br>
 
 </p>
  <section><p><a href="wheresbrian.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
