--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,8 @@
 Whether you need support, clarity, or just a steady hand behind the scenes, I’ll be there. 
 <br>
 
-
 <br>mail: brian.fno@proton.me<br>
-          insta: @brian.fno<br><span style="color: lightgrey;"><s>Love</s> letters can be sent to the following address:<br><br>
+          insta: @brian.fno<br>
 <b style="color: grey;">Les Hauts de Loire,<br>
 79 rue Gilbert Navard,<br>
 41150 Veuzain, France</b><p>💌<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
