--- a/wheresbrian.html
+++ b/wheresbrian.html
@@ -5,6 +5,53 @@
     <title>Brian F., France's butler</title>
     <link rel="stylesheet" href="tufte.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <style>.intro { 
+            font-size: 19px; 
+            font-style: italic; 
+            text-align: center; 
+            color: #444; 
+            margin: 30px 0; 
+        }
+        table { 
+            width: 100%; 
+            border-collapse: separate; 
+            border-spacing: 0 12px; 
+            margin: 30px 0; 
+        }
+        th { 
+            background: #1a3c5e; 
+            color: darkorange; 
+            padding: 18px; 
+            text-align: left; 
+            font-size: 20px; 
+        }
+        td { 
+            background: black; 
+            padding: 20px;         color: darkorange; 
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
+            border-radius: 8px; 
+        }
+        .service-title { 
+            font-weight: bold; 
+            color: lightblue; 
+            font-size: 19px; 
+        }
+        ul { 
+            margin: 10px 0; 
+            padding-left: 20px; 
+        }
+        li { 
+            margin-bottom: 6px; 
+        }
+        .cta { 
+            text-align: center; 
+            font-size: 20px; 
+            margin: 40px 0; 
+        }
+        .cta strong { 
+            color: #1a3c5e; 
+        }</style>
   </head>
 
   <body>
@@ -13,27 +60,74 @@
            <h1 id="tufte-css" style="color: ;"><span style="color:grey;"><i>Putting France on the menu.</i></span></u> </s></h1></h1>
 <br><img src="Nestor2.webp" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="width: 150px; padding-left:px; border-radius: 0px;">
       <section><p>  </p>
-<p>
-Imagine finding your dream Loire Valley stone house—vineyards endless, excitement soaring... until Notaire contracts, diagnostics, and rapid-French negotiations turn joy into overwhelm.<br><br>
+<p>Imagine the thrill of finding your perfect Loire Valley stone house—then the overwhelm of Notaire contracts, diagnostics, and rapid French negotiations.</p>
 
-Or selling a long-owned property: Market pricing, surveys, energy certificates, elusive buyers—all exhausting from abroad.<br><br>
+    <p>Or the exhaustion of selling from abroad, renovating under strict rules, or facing an urgent letter, medical appointment, or care needs for loved ones.</p>
 
-Perhaps renovating: Securing permits, sourcing trustworthy artisans, meeting strict regulations, overseeing works while preserving your home's charm.<br><br>
+    <p>As your discreet personal butler in France, I handle everything with elegance and total confidentiality:</p>
 
-Then the unexpected: An urgent administrative letter you can't decipher; a critical medical appointment needing clear communication; or arranging care for elderly loved ones—understanding France's system, finding reliable home help tailored to their wishes.<br><br>
+    <table>
+        <tbody>
+    <tr>
+        <td>
+            <span class="service-title">🏡 Property Buying & Selling</span>
+            <ul>
+                <li>Viewings</li>
+                <li>Market insights</li>
+                <li>Negotiations</li>
+                <li>Notaire meetings</li>
+                <li>Contract reviews</li>
+                <li>Diagnostics coordination</li>
+                <li>Seamless completion</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <span class="service-title">🔨 Renovation & Building</span>
+            <ul>
+                <li>Permits</li>
+                <li>Architect coordination</li>
+                <li>Vetted artisans</li>
+                <li>On-site oversight</li>
+                <li>Full compliance</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <span class="service-title">🚨 Urgent Assistance</span>
+            <ul>
+                <li>Translating critical documents</li>
+                <li>Accompanying appointments for clear communication</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <span class="service-title">🤲 Care for Loved Ones</span>
+            <ul>
+                <li>Navigating options</li>
+                <li>Securing trusted, personalised home help or residential care</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <span class="service-title">✨ Everyday Concierge</span>
+            <ul>
+                <li>Reservations</li>
+                <li>Rare sourcing</li>
+                <li>Paperwork</li>
+                <li>Translations</li>
+                <li>Personal support</li>
+            </ul>
+        </td>
+    </tr>
+</tbody>
+    </table>
 
-I've stood beside clients through every challenge, turning worry into relief. As your discreet <strong>France's butler</strong>, I handle it all with grace and confidentiality:<br><br>
-
-• <strong>Property Buying & Selling</strong>: Full guidance—viewings, Notaire meetings, contracts, market insights, negotiations, seamless completion.<br>
-• <strong>Building & Renovation</strong>: Permits, architect liaison, artisan sourcing, project oversight, regulatory compliance.<br>
-• <strong>Urgent Assistance</strong>: Deciphering critical documents, accompanying medical appointments, liaising for clarity.<br>
-• <strong>Caring for Loved Ones</strong>: Navigating French care options, securing trusted home help or residential solutions.<br>
-• <strong>Everyday Concierge</strong>: Appointments, reservations, rare sourcing, admin tasks, translations, personal support.<br><br>
-
-From dream purchase to serene retirement, I quietly make France feel like home—stress-free.<br><br>
-
-Say bonjour—let me take care of the rest.
-</p>
+    <p>Say <i>bonjour</i>—let me take care of the rest.</p>
  <section><p>
 <a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
