--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ Whether you need support, clarity, or just a steady hand behind the scenes, I’
 
 <br>mail: brian.fno@proton.me<br>
           insta: @brian.fno<br>
-<b style="color: grey;">Les Hauts de Loire,<br>
+<b style="color: grey;">Currently at:<br>Les Hauts de Loire,<br>
 79 rue Gilbert Navard,<br>
 41150 Veuzain, France</b><p>💌<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
   <p style="color:white; font-style:italic; margin-bottom:1em;">
