--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,7 @@ Whether you need support, clarity, or just a steady hand behind the scenes, I’
 
 <br>mail: brian.fno@proton.me<br>
           insta: @brian.fno<br>
-<b style="color: grey;">Currently at:<br>Les Hauts de Loire,<br>
-79 rue Gilbert Navard,<br>
-41150 Veuzain, France</b><p>💌<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
+<p>💌<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
   <p style="color:white; font-style:italic; margin-bottom:1em;">
   While filming in Paris, I needed a very specific art piece. Brian connected me with a painter represented by La Galerie Cécile Dufay. Everything was handled seamlessly, and the result exceeded expectations.  
   <cite style="font-style:normal; margin-left:0.5em;">
