--- a/about.html
+++ b/about.html
@@ -163,8 +163,7 @@ div.hiragana-table table tbody tr td + td { border-left: 1px solid rgb(204, 204,
 
   }
 </style>
-    <title>about</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>brian.fno | about</title>    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="/files/css/stylesheet.css" />
   </head>
   <body>
