--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>about</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>brian.fno | contact</title>		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="/files/css/stylesheet.css" /> <style>html {
 	font-family: 'Libertinus Serif', 'Linux Libertine', 'Georgia', 'serif', 'IPAMincho', 'Sazanami Mincho';
 	font-variant-numeric: oldstyle-nums;
