--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ div.hiragana-table table tbody tr td + td { border-left: 1px solid rgb(204, 204,
 
   }
 </style>
-		<title>at home</title>
+		<title>brian.fno | France's Butler</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="/files/css/stylesheet.css" />
 	</head>
