--- a/index.html
+++ b/index.html
@@ -859,7 +859,27 @@ body {
         <div class="menu-inner grid">
             
             <div class="menu-top">
-                <a class="menu-item" href="#articles">Articles</a>                <a class="menu-item" href="#translations">Translations</a>                                <a class="menu-item" href="#contacts">Contacts</a>
+                <a class="menu-item" href="#articles"><span style="color:#2b2b2b;">
+    While filming in Paris, I needed a very specific art piece. Brian connected me with a painter represented by La Galerie Cécile Dufay. Everything was handled seamlessly, and the result exceeded expectations.
+    — Alec Huggins 🎬
+  </span>
+  <br><br>
+  <span style="color:#3a3a3a;">
+    Brian has long been my go-to professional for complex bilingual projects across diverse sectors. His command of both language and culture is second to none — a true strategic partner.
+    — Jon Sanger, Director of Linguistica UK
+  </span>
+  <br><br>
+  <span style="color:#1f1f1f;">
+The most conscientious bilingual assistant I’ve worked with. No service has matched Brian’s accuracy, dedication, or discretion. His help has been essential in removing friction from the legal process. For Canadians needing bilingual support, he’s invaluable.
+
+— A Canadian defending linguistic rights
+  </span>
+  <br><br>
+  <span style="color:#444444;">
+    The most conscientious bilingual assistant I’ve worked with. No service has matched Brian’s accuracy, dedication, or discretion. His help has been essential in removing friction from the legal process.
+    — A Canadian defending linguistic rights
+  </span>
+  <br><br></a>                <a class="menu-item" href="#translations">Translations</a>                                <a class="menu-item" href="#contacts">Contacts</a>
             </div>
 
             <div class="menu-bottom">
