--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@ body {
         <div class="menu-inner grid">
             
             <div class="menu-top">
-                <a class="menu-item" href="testimonials.html">Testimonials</a>                                               <a class="menu-item" href="#contacts">Contacts</a>
+                <a class="menu-item" href="">Testimonials</a>                                               <a class="menu-item" href="#contacts">Contacts</a>
             </div>
 
             <div class="menu-bottom">
