--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@ body {
   <p class="motto">
     <em>To liaise with <b>aise</b> </em>is my motto.</em>
   <br><br>
-    <a href="/contact">Contact me</a> for any inquiries —or let me make a grand entrance, bow tie and all. <br>              <br><br>  <img class="contacts-profile" lazyload src="really.gif" alt="">
+    <a href="#contacts">Contact me</a> for any inquiries —or let me make a grand entrance, bow tie and all. <br>              <br><br>  <img class="contacts-profile" lazyload src="really.gif" alt="">
 
   </p>
              </div></section><section class="section grid" id="contacts">
