--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ body {
 </section>   
                <footer class="footer grid">
         <div class="footer-content">
-            <a href="https://atto.si" target="_blank">   Let me enter the scene.</a>
+            <a href="" target="_blank">   </a>
         </div>
     </footer>    
     <script src="https://gmaurovich.com/assets/js/site.js?de74213bc07e92a5cbdd4c111f67c367"></script>
