--- a/index.html
+++ b/index.html
@@ -875,20 +875,20 @@ body {
     </nav><section class="intro grid">
    
     <div class="intro-content">
-<p>
-    I’m Brian Fino — <strong><span style="color:;" >France’s *butler</strong>.<br>
-    <span style="color: ;" >Your </i> personal Anglo-French bridge.</b>
+<h1>Brian Fino — France’s <em>*butler*</em></h1>
+  <p class="lead">Your discreet Anglo-French bridge — turning French realities into effortless Anglo ease.</p>
+  
+  <p>
+    As your on-the-ground representative in France, I handle the details so you don’t have to: bureaucracy, institutions, properties, reservations, and every nuance of culture, timing, and translation — managed with precision, confidentiality, and zero drama.
   </p>
 
-  <p>
-    I operate comfortably across both worlds: Anglo expectations and  <span style="color:;" >French </span>realities.
-    I act as your on-the-ground representative in France — managing administration, navigating institutions, and ensuring nothing is lost in translation, timing, or culture.
-  </p>
-<br>
   <p class="motto">
-    <em>To liaise with <b>aise</b> </em>is my motto.</em>
-  <br><br>
-    <a href="#contacts">Contact me</a> for any inquiries —or let me make a grand entrance, bow tie and all. <br>              <br><br>  <img class="contacts-profile" lazyload src="really.gif" alt="">
+    <em>To liaise with <strong>aise</strong>.</em>
+  </p>
+
+  <p class="cta">
+    <a href="#contact" class="button">Contact me</a> — for inquiries, impossibilities, or to arrange my grand entrance (bow tie included).
+  </p>         <br><br>  <img class="contacts-profile" lazyload src="really.gif" alt="">
 
   </p>
              </div></section><section class="section grid" id="contacts">
